<resources>
    <string name="app_name">FoodFix_1.2</string>
    <string name="foodfix">FoodFix</string>
    <string name="Restorator">Ресторатор</string>
    <string name="User">Гость</string>
    <string name="phone_nomber">Номер телефона</string>
    <string name="password">Пароль</string>
    <string name="exit">Вход</string>
    <string name="regist">Регистрация</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="secondname">Отчество</string>
    <string name="sendcode">Отправить код</string>
    <string name="google_maps_key">AIzaSyDrwr_pXle9YnSfGosT2GfCDdfR26H8jhc</string>
    <string name="entercode">Введите код</string>
    <string name="rest_info">Verde cafe - это новый проект Зелёной компании. Он создан для людей, которым не безразличен окружающий мир и собственное здоровье, для которых важен качественный уровень досуга. Мы объединили уютный интерьер, качественный сервис, кулинарное искусство и максимальную пользу от продукта.</string>
    <string name="rest_contact">Телефон: +7 (499) 350-96-44
Адрес: г. Москва, Кутузовский проспект, д.36, стр.4, под. 4</string>
    <string name="title_contact">Наши контакты</string>
    <string name="description">Описание</string>
    <string name="contacts">Контакты</string>
    <string name="make_contact">Добавить контакт</string>
    <string name="reg">Зарегистрироваться</string>
    <string name="thank">Благодарим за заказ!</string>
    <string name="text">Ссылка к оплате, отправленная на Ваш номер телефона, действительна в течении 5 минут. Поторопитесь оплатить заказ!</string>
    <string name="t">Ссылка к оплате, отправленная на Ваш номер телефона, действительна в течении 5 минут. Поторопитесь оплатить заказ!</string>
    <string name="dish">Блюдо1</string>
    <string name="info_rest">  Превосходная кухня, сбалансированное питание с достаточным содержанием витаминов, подвержено строгому контролю. Предложен широкий ассортимент холодных блюд и закусок, салатов, каш, блюд из рыбы, мяса и птицы, гарниров, мясных и овощных супов, ароматной выпечки, сезонных фруктов, натуральных соков, молочных коктейлей, кисломолочной продукции.
        Также представлены десерты и свежая выпечка – ароматные венские вафли, блинчики, оладьи и пицца. Все продукты – экологически чистые, свежие, от лучших кубанских производителей. На шведской линии значительное внимание уделяется технологии непрерывного приготовления и подачи блюд, поэтому сохраняется полный ассортимент из предложенного меню на протяжении всей трапезы.
        Особое внимание уделяется диетическому питанию детей, нуждающимся в индивидуальном подходе по медицинским показаниям. Составляется меню не только полезное, но и разнообразное.</string>
</resources>
