<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#f1f0ec">

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_nomber"
                android:textColor="#42474b"
                android:textSize="16sp"
                android:singleLine="true"
                android:paddingLeft="15dp"
                android:textColorHint="#444"
                android:inputType="phone"/>

            <EditText android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password"
                android:textColorHint="#444"
                android:paddingLeft="15dp"
                android:textSize="16sp"/>



            <Button android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="10sp"
                android:textColor="#e0e0e0"
                android:backgroundTint="#42474b"
                android:paddingHorizontal="20dp"
                android:text="@string/reg"/>


        </LinearLayout>
</LinearLayout>
