<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/marshmellow">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="50dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Название ресторана"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="#42474b "
            android:textColorHint="#42474b" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="#42474b "
            android:textColorHint="#42474b" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:text="@string/contacts"
            android:textColor="#444"
            android:textSize="32sp"
            android:textStyle="italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/make_contact"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="#42474b "
            android:textColorHint="#42474b" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/make_contact"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:singleLine="true"
            android:textColor="#42474b "
            android:textColorHint="#42474b" />

        <TextView
            android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"
            android:gravity="center"
            android:text="Изменить меню"
            android:textColor="#42474b "
            android:textSize="20dip" />


    </LinearLayout>
</RelativeLayout>